# bayes_ordinal

./: .gitignore  DROP_IN_REPLACEMENT_SUMMARY.md  README.md  pyproject.toml  run_final_corrected.py  test_mcelreath_enhancements.py  test_package_import.py
Dataset/momeg/: a-level-chemistry.txt  (+1 more)
bayes_ordinal/: __init__.py  cli.py  config.py  plot_utils.py  plotting.py  priors.py  utils.py
docs/: api.md  index.md  prior_predictive_usage.md  workflow.md
examples/: Aug.ipynb  Mine.ipynb  PreMeet.ipynb  PreMeetPartialOdds.ipynb  PreMeetProbit.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  adni_mcelreath_causal_analysis.ipynb  advanced_workflow.py  aspires_comprehensive_workflow.ipynb  basic_example.py  bayesian_workflow_test.py  chess_covid_mcelreath_analysis.ipynb  complete_bayesian_workflow.ipynb  complete_bayesian_workflow_trolley.py  complete_working_workflow.ipynb  config_template.yaml  cprd_treatment_mcelreath_analysis.ipynb  debug_movies_data.py  debug_numerical_warnings.py  debug_visualization.py  example_workflow.ipynb  final_working_test.py  fix_plot_saving.py  fixed_models_test.ipynb  fullwork.ipynb  getting_started.py  heart.ipynb  hierarchical_example.ipynb  mcelreath_comprehensive_example.py  mcelreath_wine_analysis.py  mcelreath_wine_judgement.py  model_fixes.py  pymc_documentation_example.py  pymc_style_example.py  pymcordinal_comparison_notebook.py  test_both_approaches.py  test_clean_advanced_features.py  (+21 more)
tests/: test_cumulative.py  test_multilevel.py  test_partial_odds.py  test_utils.py  test_workflow.py
(+21 files in other folders)
