
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bayes-ordinal"
version = "0.1.0"
description = "A PyMC-based package for Bayesian ordinal regression with comprehensive workflow tools"
requires-python = ">=3.11"
authors = [
  { name = "Adithyan Annadurai", email = "3004787a@student.gla.ac.uk" },
]
dependencies = [
  "numpy==1.26.4",
  "scipy==1.11.4",
  "pymc==5.19.0",
  "arviz==0.19.0",
  "xarray==2023.12.0",
  "matplotlib==3.10.5",
  "pandas==2.3.1",
  "scikit-learn==1.7.1",
  "PyYAML==6.0.2",
]

[project.optional-dependencies]
dev = [
  "ipykernel==6.30.0",
  "jupyterlab>=4.1",
  "pytest>=7.4",
  "black>=23.9",
  "pre-commit>=3.4",
]
